[tool.poetry]
name = "pravo-gov-api"
version = "0.1.0"
description = ""
authors = ["Kirill"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.27.1"
beautifulsoup4 = "4.11.1"
pydantic = "1.9.1"
aiohttp = "3.8.1"
natasha = "1.4.0"
tqdm = "4.64.0"
backoff = "2.1.2"
structlog = "22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
